<resources>
    <string name="app_name">Chatr</string>
    <string name="nav_header_title">Chatr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_terms">Terms</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_rateus">Rate Us</string>
    <string name="create_template">Create Template</string>
    <string name="exactly_match">This rule will trigger only when received message will exactly match!</string>
    <string name="similarly_match">This rule will trigger with wildcard characters like * For example : (How much *) will reply to any message starting with How much</string>
    <string name="menu_sent_messages">Sent Messages</string>
    <string name="menu_messageANumber">Message a no.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="receiving_message">Incoming Message</string>
    <string name="replying_message">Reply Message</string>
    <string name="chip_fname">First Name</string>
    <string name="chip_lname">Last Name</string>
    <string name="chip_date">Date</string>
    <string name="chip_time">Time</string>
    <string name="message">The name will be replaced with the name of the person sending you the message</string>
    <string name="name">{name} -</string>
    <string name="message1">The first name will be replaced with the first name of the person sending you the message</string>
    <string name="first_name">{first name} - </string>
    <string name="last_name">{last name} - </string>
    <string name="message2">The last name will be replaced with the last name of the person sending you the message</string>
    <string name="message3">The current date will be sent as an auto-reply</string>
    <string name="date">{date} -</string>
    <string name="time">{time} - </string>
    <string name="server_reply">Server Reply</string>
    <string name="server_url">Server URL</string>
    <string name="server_config_message">Configure your server URL to get a reply for incoming messages.</string>
    <string name="server_headers">Header (Optional)</string>
    <string name="name1">name</string>
    <string name="value">value</string>
    <string name="type_json">Type: Json</string>
    <string name="method_post">Method: POST</string>
    <string name="message_url">URL: https://yourdomain.com/message.php</string>
    <string name="request_parameters">Request Parameters</string>
    <string name="response_body">Response Body</string>
    <string name="request_payload">Request Payload : app_name,sender,message</string>
    <string name="reply_body">reply : "YOUR_MESSAGE_TO_REPLY"</string>
    <string name="selected_contacts">%d Selected</string>
    <string name="fname_tag">{FIRST_NAME}</string>
    <string name="lname_tag">{LAST_NAME}</string>
    <string name="date_tag">{DATE}</string>
    <string name="time_tag">{TIME}</string>
    <string name="test_server">Test Server</string>
    <string-array name="app_type_name">
        <item>Whatsapp</item>
        <item>Whatsapp Business</item>
        <item>GBWhatsapp</item>
    </string-array>
    <string-array name="app_type_values">
        <item>@string/whatsapp_package</item>
        <item>@string/whatsapp_business_package</item>
        <item>@string/gbwhatsapp_package</item>
    </string-array>
    <string-array name="message_type_name">
        <item>Text</item>
        <item>Image</item>
        <item>Video</item>
    </string-array>
    <string-array name="message_type_values">
        <item>text</item>
        <item>image</item>
        <item>video</item>
    </string-array>
    <string-array name="delay_reply_items_array">
        <item>Off</item>
        <item>5 Seconds</item>
        <item>10 Seconds</item>
        <item>15 Seconds</item>
        <item>25 Seconds</item>
        <item>35 Seconds</item>
        <item>45 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
    </string-array>
    <string-array name="delay_reply_values_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>25</item>
        <item>35</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string name="key_darkmode">DarkMode</string>
    <string name="keyReplySettings">replySettings</string>
    <string name="keyWhatsapp">com.whatsapp</string>
    <string name="keyWhatsappBusiness">com.whatsapp.w4b</string>
    <string name="keyGBWhatsapp">com.gbwhatsapp</string>
    <string name="keyWhatsappPlus">com.whatsapp</string>
    <string name="keyInstagram">com.instagram.android</string>
    <string name="keyFbMessenger">com.facebook.orca</string>
    <string name="keyTelegram">org.telegram.messenger</string>
    <string name="turn_on_notification_listening_service">Turn on notification listening service</string>
    <string name="action_import_export">Import/Export</string>
    <string name="bulk_messaging">Bulk Messaging</string>
    <string name="send_via_csv">Send From CSV</string>
    <string name="send_from_contacts">Send From Contacts</string>
    <string name="service_desc">Please allow this service</string>
    <string name="title_activity_bulk_messaging">BulkMessagingActivity</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_csv">Csv</string>
    <string name="tab_contacts">Contacts</string>
    <string name="add_new_rule">Add New Rule</string>
    <string name="main_launcher">Main Launcher</string>
    <string name="enter_message">Enter message</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="enter_campaign_name">Enter Campaign Name</string>
    <string name="choose_contacts">Choose Contacts</string>
    <string name="save_button">Save Button</string>
    <string name="exact_match">Exact Match</string>
    <string name="similarly_match1">Similarly Match</string>
    <string name="tags">TAGS</string>
    <string name="info">Info</string>
    <string name="search_here">Search Here</string>
    <string name="add_new_campaign">Add New Campaign</string>
    <string name="delete_button">Delete Button</string>
    <string name="start">Start</string>
    <string name="sent_status">Sent Status</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_plus">Whatsapp+</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="gb_whatsapp">GB Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="messenger">Messenger</string>
    <string name="telegram">Telegram</string>
    <string name="customer_image">%s/%s</string>
    <string name="admob_app_id">ca-app-pub-6232176115038441~4250195417</string>
    <string name="admob_banner_ad_id">ca-app-pub-6232176115038441/4058623722</string>
    <string name="admob_interstitial_ad_id">ca-app-pub-6232176115038441/9406153245</string>
    <string name="select_image">Select Image</string>
    <string name="select_video">Select Video</string>
    <string name="select_document">Select Document</string>
    <string name="buy_now">Buy Now</string>
    <string name="close">Close</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="_1_get_unlimited_replies">1 : Get unlimited replies</string>
    <string name="_2_get_unlimited_bulk_messaging">2 : Get unlimited bulk messaging</string>
    <string name="_3_remove_ads">3 : Remove Ads</string>
</resources>