<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/buy_premium"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/make_payment"
        />
    <TextView
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:text="@string/_1_get_unlimited_replies"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:text="@string/_2_get_unlimited_bulk_messaging"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:text="@string/_3_remove_ads"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buy_now"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:text="@string/buy_now"
            android:backgroundTint="@color/Teal"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:text="@string/close"
            android:backgroundTint="@color/Coral"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>