<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Add From CSV file"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/formLayout"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/campaignName"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint=" Enter Campaign Name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/chooseCSV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Choose CSV"
            android:gravity="left"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/Cantaloupe"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_attach_file_24"
            android:drawableTint="@color/white"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/appType"
        android:entries="@array/app_type_name"
        android:entryValues="@array/app_type_values"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/messageType"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/message_type_name"
        android:entryValues="@array/message_type_values"
        />
    <TextView
        android:id="@+id/chooseImage"
        android:visibility="gone"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:padding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_image_search_24"
        />
    <TextView
        android:id="@+id/chooseVideo"
        android:visibility="gone"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/select_video"
        app:drawableStartCompat="@drawable/ic_baseline_image_search_24"
        />
    <TextView
        android:id="@+id/chooseDocument"
        android:visibility="gone"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_document"
        app:drawableStartCompat="@drawable/ic_baseline_image_search_24"
        />
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/btDismissCustomDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Coral"
            android:textColor="@color/white"
            android:text="Cancel"   />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/scanning_file"
        />
</LinearLayout>